removed white-space control to prevent wrapping

--- a/theme/static/css/styles.css
+++ b/theme/static/css/styles.css
@@ -4,7 +4,6 @@
 
 a,
 a:hover {
-  white-space: nowrap;
   color: inherit;
 }
 
@@ -191,7 +190,6 @@ h3 {
 h3 a,
 h3 a:hover {
   color: #176273;
-  white-space: normal;
 }
 
 /*
